Add head and some comments on index.html
Signed-off-by: Eunki Hong <h.pichulia@gmail.com>

--- a/index.html
+++ b/index.html
@@ -1,13 +1,23 @@
 <!DOCTYPE html>
 <html>
+<head>
+<meta charset="UTF-8"/>
+<meta content="IE=edge" http-equiv="X-UA-Compatible">
+<meta content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1" name="viewport">
+
+<title>홍은기 ❤️ 이정민 결혼식에 초대합니다</title>
+<link href="./public/styles/main.css" rel="stylesheet"/>
+<link rel="icon" href="./resources/image/favicon.ico">
+<script src="./public/scripts/main.js"></script>
+
+<!-- https://swiperjs.com/demos#effect-coverflow -->
+<link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
+
 <body>
 
-<head>
-<meta charset="utf-8">
-<title>HappyHappyWeddingCard</title>
-</head>
-
 <div class="FullPage" style="width: 360px; height: 4520px; background: white; flex-direction: column; justify-content: flex-start; align-items: flex-start; display: inline-flex">
+
+  <!-- Page 1 : Main image -->
 	<div class="Page1" style="width: 360px; height: 720px; position: relative; background: #FBFBFB; overflow:hidden">
   <img class="Coverimage" style="width: 371px; left: 0px; top: 0px; position: absolute" src="resources/image/Cover_0.jpg" />
   <div class="WhiteGradient" style="width: 500px; height: 300px; left:-100px;top: 400px; position: absolute; background: linear-gradient(#D9D9D9 0%, white 100%); filter: blur(20px)"></div>
@@ -18,7 +28,7 @@
   </div>
 </div>
 
-
+  <!-- Page 2 : Welcome text -->
   <div class="Page2" style="width: 360px; height: 720px; position: relative; background: #FBFBFB; overflow:hidden">
     <div class="13" style="width: 123px; height: 25px; left: 121px; top: 28px; position: absolute; text-align: center; color: black; font-size: 12px; font-family: Italianno; font-weight: 400; word-wrap: break-word">7 / 13</div>
     <div class="Line1" style="width: 311px; height: 0px; left: 23px; top: 51px; position: absolute; border: 1px black solid"></div>
@@ -32,6 +42,7 @@
   </div>
 
 
+  <!-- Page 3 : Dooms day -->
   <div class="Page3" style="width: 360px; height: 600px; position: relative; overflow:hidden">
     <img class="APatternOfBigWhiteFlowersForWedding" style="width: 360; height: 600px; left: 0px; top: 0px; position: absolute" src="resources/image/chris-lee-unsplash.jpg" />
     <div class="13" style="width: 123px; height: 25px; left: 122px; top: 21px; position: absolute; text-align: center; color: black; font-size: 12px; font-family: Italianno; font-weight: 400; word-wrap: break-word">7 / 13</div>
@@ -183,6 +194,8 @@
     <div class="07" style="width: 94px; height: 23px; left: 134px; top: 236px; position: absolute; text-align: center; color: black; font-size: 17px; font-family: ChosunilboNM; font-weight: 400; word-wrap: break-word">2024. 07</div>
     <div style="width: 77px; height: 38px; left: 141px; top: 111px; position: absolute; text-align: center; color: black; font-size: 20px; font-family: ChosunilboNM; font-weight: 400; word-wrap: break-word">날짜</div>
   </div>
+
+  <!-- Page 4 : Gallery -->
   <div class="Page4" style="width: 360px; height: 720px; position: relative; background: #FBFBFB; box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); overflow:hidden">
     <div class="13" style="width: 123px; height: 25px; left: 122px; top: 27px; position: absolute; text-align: center; color: black; font-size: 12px; font-family: Italianno; font-weight: 400; word-wrap: break-word">7 / 13</div>
     <div class="Line4" style="width: 311px; height: 0px; left: 24px; top: 50px; position: absolute; border: 1px black solid"></div>
@@ -198,6 +211,8 @@
       </div>
     </div>
   </div>
+
+  <!-- Page 5 : How to come -->
   <div class="Page5" style="width: 360px; height: 1040px; position: relative; background: #FBFBFB; overflow:hidden">
     <div class="13" style="width: 123px; height: 25px; left: 123px; top: 26px; position: absolute; text-align: center; color: black; font-size: 12px; font-family: Italianno; font-weight: 400; word-wrap: break-word">7 / 13</div>
     <div class="Line1" style="width: 311px; height: 0px; left: 25px; top: 49px; position: absolute; border: 1px black solid"></div>
@@ -249,6 +264,8 @@
       </div>
     </div>
   </div>
+
+  <!-- Page 6 : Thanks to -->
   <div class="Page6" style="width: 360px; height: 720px; position: relative; background: #FBFBFB;overflow:hidden">
     <div class="13" style="width: 123px; height: 25px; left: 123px; top: 23px; position: relative; text-align: center; color: black; font-size: 12px; font-family: Italianno; font-weight: 400; word-wrap: break-word">7 / 13</div>
     <div class="Line2" style="width: 311px; height: 0px; left: 25px; top: 46px; position: absolute; border: 1px black solid"></div>
@@ -360,5 +377,4 @@
   </div>
 </div>
 
-</body>
 </html>
