Add icon of map
Signed-off-by: Eunki Hong <h.pichulia@gmail.com>

--- a/index.html
+++ b/index.html
@@ -297,17 +297,17 @@
                   </div>
                   <div class="icon-button">
                     <div>
-                      <img class="icon-image" src="https://via.placeholder.com/40x40" />
+                      <img class="icon-image" src="resources/image/icon_kakao.png" />
                     </div>
                   </div>
                   <div class="icon-button">
                     <div>
-                      <img class="icon-image" src="https://via.placeholder.com/40x40" />
+                      <img class="icon-image" src="resources/image/icon_tmap.jpeg" />
                     </div>
                   </div>
                   <div class="icon-button">
                     <div>
-                      <img class="icon-image" src="https://via.placeholder.com/40x40" />
+                      <img class="icon-image" src="resources/image/icon_google.png" />
                     </div>
                   </div>
                 </div>
