--- a/index.html
+++ b/index.html
@@ -26,12 +26,13 @@
 
         <!-- Page 1 : Main image -->
         <div class="page">
-          <img class="Coverimage" style="width: 371px; left: 0px; top: 0px; position: relative" src="resources/image/Cover_0.jpg" />
-          <div class="WhiteGradient" style="width: 500px; height: 300px; left:-100px;top: 400px; position: relative; background: linear-gradient(#D9D9D9 0%, white 100%); filter: blur(20px)"></div>
-          <div class="Frame9" style="width: 266px; padding-top: 43px; padding-bottom: 43px; left: 53px; top: 397px; position: relative; flex-direction: column; justify-content: flex-start; align-items: center; gap: 15px; display: inline-flex">
-            <div style="width: 252px; height: 32px; text-align: center; color: black; font-size: 20px; font-family: Noto Serif KR; font-weight: 400; word-wrap: break-word">홍은기   &   이정민</div>
-            <div class="WeddingInvitation" style="width: 266px; height: 66px; text-align: center; color: #0F0F3F; font-size: 48px; font-family: Ingrid Darling; font-weight: 400; word-wrap: break-word">Wedding Invitation</div>
-            <div class="71315" style="width: 212px; height: 41px; text-align: center; color: black; font-size: 15px; font-family: Noto Serif KR; font-weight: 400; line-height: 22.50px; word-wrap: break-word">2024년 7월 13일 토요일 오후 1시<br/>삼성전자 서초 사옥 웨딩홀 5층</div>
+          <div class="Coverimage">
+            <div class="Frame9">
+              <div style="font-size: 20px;">홍은기   &   이정민</div>
+              <div class="WeddingInvitation" style="color: #0F0F3F; font-size: 48px; font-family: Ingrid Darling;">Wedding Invitation</div>
+              <div style="font-size: 15px;">2024년 7월 13일 토요일 오후 1시<br/>삼성전자 서초 사옥 웨딩홀 5층</div>
+              <div style="height:5vh;"></div>
+            </div>
           </div>
         </div>
 
@@ -58,7 +59,7 @@
               <span>정민</span>
             </div>
           </div>
-          <div class="footer"/>
+          <div class="footer"></div>
           </div>
 
 
