Add Calendar generator

--- a/index.html
+++ b/index.html
@@ -69,152 +69,11 @@
             <div class="header"></div>
 
             <h1>날짜</h1>
-            <div class="07" style="width: 94px; height: 23px; left: 134px; top: 236px; position: relative; text-align: center; color: black; font-size: 17px; font-family: Noto Serif KR; font-weight: 400; word-wrap: break-word">2024. 07</div>
+            <div class="2024_July" style="width: 94px; height: 23px; left: 134px; top: 236px; position: relative; text-align: center; color: black; font-size: 17px; font-family: Noto Serif KR; font-weight: 400; word-wrap: break-word">2024. 07</div>
 
             <div class="Ellipse1" style="width: 24px; height: 23px; left: 267px; top: 333px; position: relative; background: #0F0F3F; border-radius: 9999px"></div>
             <div class="rect">
-              <div class="calendar" style="width: 220px; height: 180px; left: 71px; top: 269px; position: relative; flex-direction: column; justify-content: flex-start; align-items: center; display: inline-flex">
-                <div class="Grid" style="align-self: stretch; flex: 1 1 0; flex-direction: column; justify-content: space-between; align-items: center; display: flex">
-                  <div class="Line" style="align-self: stretch; justify-content: space-between; align-items: center; display: inline-flex">
-                    <div class="AtomsWeekDey">
-                      <div class="Text">일</div>
-                    </div>
-                    <div class="AtomsWeekDey">
-                      <div class="Text">월</div>
-                    </div>
-                    <div class="AtomsWeekDey">
-                      <div class="Text">화</div>
-                    </div>
-                    <div class="AtomsWeekDey">
-                      <div class="Text">수</div>
-                    </div>
-                    <div class="AtomsWeekDey">
-                      <div class="Text">목</div>
-                    </div>
-                    <div class="AtomsWeekDey">
-                      <div class="Text">금</div>
-                    </div>
-                    <div class="AtomsWeekDey">
-                      <div class="Text">토</div>
-                    </div>
-                  </div>
-                  <div class="Line" style="align-self: stretch; justify-content: space-between; align-items: center; display: inline-flex">
-                    <div class="AtomsDeyNumber" style="width: 24px; height: 24px; border-radius: 4px; justify-content: center; align-items: center; display: flex">
-                      <div class="Text" style="text-align: center; color: rgba(96.90, 96.90, 96.90, 0.25); font-size: 11px; font-family: Noto Serif KR; font-weight: 400; word-wrap: break-word">30</div>
-                    </div>
-                    <div class="AtomsDeyNumber" style="width: 24px; height: 24px; border-radius: 4px; justify-content: center; align-items: center; display: flex">
-                      <div class="Text" style="text-align: center; color: #616161; font-size: 11px; font-family: Noto Serif KR; font-weight: 400; word-wrap: break-word">1</div>
-                    </div>
-                    <div class="AtomsDeyNumber" style="width: 24px; height: 24px; border-radius: 4px; justify-content: center; align-items: center; display: flex">
-                      <div class="Text" style="text-align: center; color: #616161; font-size: 11px; font-family: Noto Serif KR; font-weight: 400; word-wrap: break-word">2</div>
-                    </div>
-                    <div class="AtomsDeyNumber" style="width: 24px; height: 24px; border-radius: 4px; justify-content: center; align-items: center; display: flex">
-                      <div class="Text" style="text-align: center; color: #616161; font-size: 11px; font-family: Noto Serif KR; font-weight: 400; word-wrap: break-word">3</div>
-                    </div>
-                    <div class="AtomsDeyNumber" style="width: 24px; height: 24px; border-radius: 4px; justify-content: center; align-items: center; display: flex">
-                      <div class="Text" style="text-align: center; color: #616161; font-size: 11px; font-family: Noto Serif KR; font-weight: 400; word-wrap: break-word">4</div>
-                    </div>
-                    <div class="AtomsDeyNumber" style="width: 24px; height: 24px; border-radius: 4px; justify-content: center; align-items: center; display: flex">
-                      <div class="Text" style="text-align: center; color: #616161; font-size: 11px; font-family: Noto Serif KR; font-weight: 400; word-wrap: break-word">5</div>
-                    </div>
-                    <div class="AtomsDeyNumber" style="width: 24px; height: 24px; border-radius: 4px; justify-content: center; align-items: center; display: flex">
-                      <div class="Text" style="text-align: center; color: #616161; font-size: 11px; font-family: Noto Serif KR; font-weight: 400; word-wrap: break-word">6</div>
-                    </div>
-                  </div>
-                  <div class="Line" style="align-self: stretch; justify-content: space-between; align-items: center; display: inline-flex">
-                    <div class="AtomsDeyNumber" style="width: 24px; height: 24px; border-radius: 4px; justify-content: center; align-items: center; display: flex">
-                      <div class="Text" style="text-align: center; color: #AB5959; font-size: 11px; font-family: Noto Serif KR; font-weight: 400; word-wrap: break-word">7</div>
-                    </div>
-                    <div class="AtomsDeyNumber" style="width: 24px; height: 24px; border-radius: 4px; justify-content: center; align-items: center; display: flex">
-                      <div class="Text" style="text-align: center; color: #616161; font-size: 11px; font-family: Noto Serif KR; font-weight: 400; word-wrap: break-word">8</div>
-                    </div>
-                    <div class="AtomsDeyNumber" style="width: 24px; height: 24px; border-radius: 4px; justify-content: center; align-items: center; display: flex">
-                      <div class="Text" style="text-align: center; color: #616161; font-size: 11px; font-family: Noto Serif KR; font-weight: 400; word-wrap: break-word">9</div>
-                    </div>
-                    <div class="AtomsDeyNumber" style="width: 24px; height: 24px; border-radius: 4px; justify-content: center; align-items: center; display: flex">
-                      <div class="Text" style="text-align: center; color: #616161; font-size: 11px; font-family: Noto Serif KR; font-weight: 400; word-wrap: break-word">10</div>
-                    </div>
-                    <div class="AtomsDeyNumber" style="width: 24px; height: 24px; border-radius: 4px; justify-content: center; align-items: center; display: flex">
-                      <div class="Text" style="text-align: center; color: #616161; font-size: 11px; font-family: Noto Serif KR; font-weight: 400; word-wrap: break-word">11</div>
-                    </div>
-                    <div class="AtomsDeyNumber" style="width: 24px; height: 24px; border-radius: 4px; justify-content: center; align-items: center; display: flex">
-                      <div class="Text" style="text-align: center; color: #616161; font-size: 11px; font-family: Noto Serif KR; font-weight: 400; word-wrap: break-word">12</div>
-                    </div>
-                    <div class="AtomsDeyNumber" style="width: 24px; height: 24px; border-radius: 4px; justify-content: center; align-items: center; display: flex">
-                      <div class="Text" style="text-align: center; color: white; font-size: 11px; font-family: Noto Serif KR; font-weight: 400; word-wrap: break-word">13</div>
-                    </div>
-                  </div>
-                  <div class="Line" style="align-self: stretch; justify-content: space-between; align-items: center; display: inline-flex">
-                    <div class="AtomsDeyNumber" style="width: 24px; height: 24px; border-radius: 4px; justify-content: center; align-items: center; display: flex">
-                      <div class="Text" style="text-align: center; color: #AB5959; font-size: 11px; font-family: Noto Serif KR; font-weight: 400; word-wrap: break-word">14</div>
-                    </div>
-                    <div class="AtomsDeyNumber" style="width: 24px; height: 24px; border-radius: 4px; justify-content: center; align-items: center; display: flex">
-                      <div class="Text" style="text-align: center; color: #616161; font-size: 11px; font-family: Noto Serif KR; font-weight: 400; word-wrap: break-word">15</div>
-                    </div>
-                    <div class="AtomsDeyNumber" style="width: 24px; height: 24px; border-radius: 4px; justify-content: center; align-items: center; display: flex">
-                      <div class="Text" style="text-align: center; color: #616161; font-size: 11px; font-family: Noto Serif KR; font-weight: 400; word-wrap: break-word">16</div>
-                    </div>
-                    <div class="AtomsDeyNumber" style="width: 24px; height: 24px; border-radius: 4px; justify-content: center; align-items: center; display: flex">
-                      <div class="Text" style="text-align: center; color: #616161; font-size: 11px; font-family: Noto Serif KR; font-weight: 400; word-wrap: break-word">17</div>
-                    </div>
-                    <div class="AtomsDeyNumber" style="width: 24px; height: 24px; border-radius: 4px; justify-content: center; align-items: center; display: flex">
-                      <div class="Text" style="text-align: center; color: #616161; font-size: 11px; font-family: Noto Serif KR; font-weight: 400; word-wrap: break-word">18</div>
-                    </div>
-                    <div class="AtomsDeyNumber" style="width: 24px; height: 24px; border-radius: 4px; justify-content: center; align-items: center; display: flex">
-                      <div class="Text" style="text-align: center; color: #616161; font-size: 11px; font-family: Noto Serif KR; font-weight: 400; word-wrap: break-word">19</div>
-                    </div>
-                    <div class="AtomsDeyNumber" style="width: 24px; height: 24px; border-radius: 4px; justify-content: center; align-items: center; display: flex">
-                      <div class="Text" style="text-align: center; color: #616161; font-size: 11px; font-family: Noto Serif KR; font-weight: 400; word-wrap: break-word">20</div>
-                    </div>
-                  </div>
-                  <div class="Line" style="align-self: stretch; justify-content: space-between; align-items: center; display: inline-flex">
-                    <div class="AtomsDeyNumber" style="width: 24px; height: 24px; border-radius: 4px; justify-content: center; align-items: center; display: flex">
-                      <div class="Text" style="text-align: center; color: #AB5959; font-size: 11px; font-family: Noto Serif KR; font-weight: 400; word-wrap: break-word">21</div>
-                    </div>
-                    <div class="AtomsDeyNumber" style="width: 24px; height: 24px; border-radius: 4px; justify-content: center; align-items: center; display: flex">
-                      <div class="Text" style="text-align: center; color: #616161; font-size: 11px; font-family: Noto Serif KR; font-weight: 400; word-wrap: break-word">22</div>
-                    </div>
-                    <div class="AtomsDeyNumber" style="width: 24px; height: 24px; border-radius: 4px; justify-content: center; align-items: center; display: flex">
-                      <div class="Text" style="text-align: center; color: #616161; font-size: 11px; font-family: Noto Serif KR; font-weight: 400; word-wrap: break-word">23</div>
-                    </div>
-                    <div class="AtomsDeyNumber" style="width: 24px; height: 24px; border-radius: 4px; justify-content: center; align-items: center; display: flex">
-                      <div class="Text" style="text-align: center; color: #616161; font-size: 11px; font-family: Noto Serif KR; font-weight: 400; word-wrap: break-word">24</div>
-                    </div>
-                    <div class="AtomsDeyNumber" style="width: 24px; height: 24px; border-radius: 4px; justify-content: center; align-items: center; display: flex">
-                      <div class="Text" style="text-align: center; color: #616161; font-size: 11px; font-family: Noto Serif KR; font-weight: 400; word-wrap: break-word">25</div>
-                    </div>
-                    <div class="AtomsDeyNumber" style="width: 24px; height: 24px; border-radius: 4px; justify-content: center; align-items: center; display: flex">
-                      <div class="Text" style="text-align: center; color: #616161; font-size: 11px; font-family: Noto Serif KR; font-weight: 400; word-wrap: break-word">26</div>
-                    </div>
-                    <div class="AtomsDeyNumber" style="width: 24px; height: 24px; border-radius: 4px; justify-content: center; align-items: center; display: flex">
-                      <div class="Text" style="text-align: center; color: #616161; font-size: 11px; font-family: Noto Serif KR; font-weight: 400; word-wrap: break-word">27</div>
-                    </div>
-                  </div>
-                  <div class="Line" style="align-self: stretch; justify-content: space-between; align-items: center; display: inline-flex">
-                    <div class="AtomsDeyNumber" style="width: 24px; height: 24px; border-radius: 4px; justify-content: center; align-items: center; display: flex">
-                      <div class="Text" style="text-align: center; color: #AB5959; font-size: 11px; font-family: Noto Serif KR; font-weight: 400; word-wrap: break-word">28</div>
-                    </div>
-                    <div class="AtomsDeyNumber" style="width: 24px; height: 24px; border-radius: 4px; justify-content: center; align-items: center; display: flex">
-                      <div class="Text" style="text-align: center; color: #616161; font-size: 11px; font-family: Noto Serif KR; font-weight: 400; word-wrap: break-word">29</div>
-                    </div>
-                    <div class="AtomsDeyNumber" style="width: 24px; height: 24px; border-radius: 4px; justify-content: center; align-items: center; display: flex">
-                      <div class="Text" style="text-align: center; color: #616161; font-size: 11px; font-family: Noto Serif KR; font-weight: 400; word-wrap: break-word">30</div>
-                    </div>
-                    <div class="AtomsDeyNumber" style="width: 24px; height: 24px; border-radius: 4px; justify-content: center; align-items: center; display: flex">
-                      <div class="Text" style="text-align: center; color: #616161; font-size: 11px; font-family: Noto Serif KR; font-weight: 400; word-wrap: break-word">31</div>
-                    </div>
-                    <div class="AtomsDeyNumber" style="width: 24px; height: 24px; border-radius: 4px; justify-content: center; align-items: center; display: flex">
-                      <div class="Text" style="text-align: center; color: rgba(96.90, 96.90, 96.90, 0.25); font-size: 11px; font-family: Noto Serif KR; font-weight: 400; word-wrap: break-word">1</div>
-                    </div>
-                    <div class="AtomsDeyNumber" style="width: 24px; height: 24px; border-radius: 4px; justify-content: center; align-items: center; display: flex">
-                      <div class="Text" style="text-align: center; color: rgba(96.90, 96.90, 96.90, 0.25); font-size: 11px; font-family: Noto Serif KR; font-weight: 400; word-wrap: break-word">2</div>
-                    </div>
-                    <div class="AtomsDeyNumber" style="width: 24px; height: 24px; border-radius: 4px; justify-content: center; align-items: center; display: flex">
-                      <div class="Text" style="text-align: center; color: rgba(96.90, 96.90, 96.90, 0.25); font-size: 11px; font-family: Noto Serif KR; font-weight: 400; word-wrap: break-word">3</div>
-                    </div>
-                  </div>
-                </div>
-              </div>
+              <div class="calendar"></div>
             </div>
             <div class="footer"></div>
           </div>
@@ -463,6 +322,7 @@
               </div>
               <div class="footer"></div>
 
+              <script src="script.js" defer></script>
 
               <!-- Initialize Swiper -->
               <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
@@ -505,10 +365,10 @@
                 var closeButton = document.getElementsByClassName("closeModal")[0];
 
                 // When the user clicks image, or close button, close the modal
-                modalImage.onclick = function() { 
+                modalImage.onclick = function() {
                                   modal.style.display = "none";
                                 }
-                closeButton.onclick = function() { 
+                closeButton.onclick = function() {
                                   modal.style.display = "none";
                                 }
               </script>
