Make gallery container center
Signed-off-by: Eunki Hong <h.pichulia@gmail.com>

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             <div class="header"></div>
             <h1>갤러리</h1>
 
-            <div class="Content" style="position: relative; background: #FBFBFB">
+            <div class="galleryContent">
               <div id="galleryContainer">
                 <div class="swiper mySwiper">
                   <div class="swiper-wrapper">
